force-apps/deploy/main/default/objects/PropertyPriceHistory__c/PropertyPriceHistory__c.object-meta.xml
<CustomObject>
    <description>This object contains the history of the prices for each property</description>
    <label>Property Price History</label>
    <nameField>
        <displayFormat>HIST-{0000}</displayFormat>
        <label>PriceHistory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Prices History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>