force-apps/deploy/main/default/objects/PropertyPriceHistory__c/fields/DateChanged__c.field-meta.xml
<CustomField>
    <fullName>DateChanged__c</fullName>
    <label>Date Changed</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>