force-apps/deploy/main/default/objects/PropertyPriceHistory__c/fields/NewPrice__c.field-meta.xml
<CustomField>
    <fullName>NewPrice__c</fullName>
    <label>New Price</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>