force-apps/deploy/main/default/objects/PropertyPriceHistory__c/listViews/Price_Changes.listView-meta.xml
<ListView>
    <fullName>Price_Changes</fullName>
    <columns>NAME</columns>
    <columns>Property__c</columns>
    <columns>DateChanged__c</columns>
    <columns>OldPrice__c</columns>
    <columns>NewPrice__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OldPrice__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Price Changes</label>
</ListView>